2008-11-19  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/ClipboardActions.cs: Add missing '!'. Fixes pasting.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs: Used CanEdit instead of readonly

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/ClipboardActions.cs: Recognizing readonly property for
	cut&paste operations.

2008-11-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextMarker.cs: Add properties to UnderlineMarker to
	limit it to part of a line.

2008-11-17  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextMarker.cs: Make underline marker use named
	colours. Fix some spelling.

	* Mono.TextEditor.Highlighting/Style.cs: Define colour names for error
	and warning underlines.

2008-11-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement y.

2008-11-10  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViActionMaps.cs: Allow Page(Up|Down).

2008-11-10  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Allow backspace for search/ex.

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor/ClipboardActions.cs: fixed possible null reference
	exception.

2008-11-07  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement p P.

2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Add helper for generating menu for
	selecting input method.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed 'Bug 442110 - Syntax
	highlighting parser problem with escaped backslash'.
